force-app/main/default/objects/Contract/fields/BillingContact__c.field-meta.xml
<CustomField>
    <fullName>BillingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>契約</relationshipLabel>
    <relationshipName>ContractBillingContacts</relationshipName>
    <type>Lookup</type>
</CustomField>