force-app/main/default/objects/Contract/fields/BillingIsSameContact__c.field-meta.xml
<CustomField>
    <fullName>BillingIsSameContact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>請求先は取引先責任者と同じ</label>
    <type>Checkbox</type>
</CustomField>