force-app/main/default/objects/Contract/fields/CloudService__c.field-meta.xml
<CustomField>
    <fullName>CloudService__c</fullName>
    <label>クラウドサービス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CloudService</valueSetName>
    </valueSet>
</CustomField>