force-app/main/default/objects/Contract/fields/ContractFee__c.field-meta.xml
<CustomField>
    <fullName>ContractFee__c</fullName>
    <inlineHelpText>注文金額の合計</inlineHelpText>
    <label>契約金額</label>
    <summarizedField>Order.TotalAmount</summarizedField>
    <summaryFilterItems>
        <field>Order.Status</field>
        <operation>equals</operation>
        <value>有効</value>
    </summaryFilterItems>
    <summaryForeignKey>Order.ContractId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>