force-app/main/default/objects/Contract/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <label>契約ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>