force-app/main/default/objects/Contract/fields/ContractURL__c.field-meta.xml
<CustomField>
    <fullName>ContractURL__c</fullName>
    <label>契約書URL</label>
    <type>Url</type>
</CustomField>