force-app/main/default/objects/Contract/fields/InvoiceStartDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStartDate__c</fullName>
    <formula>ADDMONTHS( StartDate , TrialSpanMonths__c )</formula>
    <label>請求開始日</label>
    <type>Date</type>
</CustomField>