force-app/main/default/objects/Contract/fields/IsFirstBilled__c.field-meta.xml
<CustomField>
    <fullName>IsFirstBilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>初回請求済み</label>
    <type>Checkbox</type>
</CustomField>