force-app/main/default/objects/Contract/fields/NoInvoice__c.field-meta.xml
<CustomField>
    <fullName>NoInvoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>クラウドサービス請求なし</label>
    <type>Checkbox</type>
</CustomField>