force-app/main/default/objects/Contract/fields/OptionIssueCount__c.field-meta.xml
<CustomField>
    <fullName>OptionIssueCount__c</fullName>
    <label>オプション発行数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>