force-app/main/default/objects/Contract/fields/PageCount__c.field-meta.xml
<CustomField>
    <fullName>PageCount__c</fullName>
    <label>ページ数</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>