force-app/main/default/objects/Contract/fields/piDeletedUserEnv__c.field-meta.xml
<CustomField>
    <fullName>piDeletedUserEnv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>クラウドサービス環境削除</label>
    <type>Checkbox</type>
</CustomField>