force-app/main/default/objects/Contract/fields/TransferFee__c.field-meta.xml
<CustomField>
    <fullName>TransferFee__c</fullName>
    <label>振込手数料負担</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>お客様</fullName>
            </value>
            <value>
                <fullName>当社</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>