force-app/main/default/objects/Contract/fields/TrialEndDate__c.field-meta.xml
<CustomField>
    <fullName>TrialEndDate__c</fullName>
    <formula>ADDMONTHS( StartDate , TrialSpanMonths__c )</formula>
    <label>トライアル終了日</label>
    <type>Date</type>
</CustomField>