force-app/main/default/objects/Contract/fields/TrialSpanMonths__c.field-meta.xml
<CustomField>
    <fullName>TrialSpanMonths__c</fullName>
    <label>トライアル期間(月)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>