force-app/main/default/objects/Contract/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>契約形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>月額</fullName>
                <default>true</default>
                <label>月額</label>
            </value>
            <value>
                <fullName>一括</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>