force-app/main/default/objects/Contract/fields/UpdateContractSalesDatetime__c.field-meta.xml
<CustomField>
    <fullName>UpdateContractSalesDatetime__c</fullName>
    <label>契約売上更新日時</label>
    <type>DateTime</type>
</CustomField>