force-app/main/default/objects/Contract/recordTypes/CloudService.recordType-meta.xml
<RecordType>
    <fullName>CloudService</fullName>
    <active>true</active>
    <label>クラウドサービス</label>
</RecordType>