force-app/main/default/objects/Contract/recordTypes/Normal.recordType-meta.xml
<RecordType>
    <fullName>Normal</fullName>
    <active>true</active>
    <label>通常</label>
</RecordType>